--- a/inicio/src/index.css
+++ b/inicio/src/index.css
@@ -1,3 +1,12 @@
+h2{
+  color: red (0,8%,51%);
+  font-weight: 800;
+}
+
+
+
+
+
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
